@@ -722,7 +722,7 @@ class disPost extends xPDOSimpleObject {
             'GROUP_CONCAT(DISTINCT CONCAT_WS(":",User.id,User.username)) AS readers',
         ));
         $c->where(array(
-            'disSession.place' => 'thread:'.$this->get('id'),
+            'disSession.place:LIKE' => 'thread:'.$this->get('id').':%',
         ));
         $c->groupby('disSession.user');
         $members = $this->xpdo->getObject('disSession',$c);
@@ -740,8 +740,8 @@ class disPost extends xPDOSimpleObject {
 
         $c = $this->xpdo->newQuery('disSession');
         $c->where(array(
-            'place' => 'thread:'.$this->get('id'),
-            'user' => 0,
+            'place:LIKE' => 'thread:'.$this->get('id').':%',
+            'AND:user:=' => 0,
         ));
         $guests = $this->xpdo->getCount('disSession',$c);
 
